<?xml version="1.0"?>
<package format="3">
  <name>executor_demos</name>
  <version>0.1.0</version>
  <description>Examples showing differences between rclpy.spin and SingleThreadedExecutor.</description>

  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
